--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pm2 start ./pm2.json && pm2 logs",
+    "dev": "pm2 start ./pm2.json && pm2 ./logs",
     "start": "npm run dev",
     "stop": "pm2 stop sofmanagement && pm2 delete sofmanagement"
   },
